--- a/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
+++ b/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
@@ -1,90 +1,105 @@
 .container {
-  background-color: white;
-  width: 800px;
-  /* display: grid; */
-  /* gap: 5px;
+	background-color: white;
+	width: 100%;
+	/* display: grid; */
+	/* gap: 5px;
    */
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 100px;
-
+	display: flex;
+	flex-direction: column-reverse;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 100px;
 }
 
 .singleReview {
-  background-color: white;
-  border-bottom: 1px solid black;
-  display: grid;
-  grid-template-columns: 100px 130px repeat(2, 0) 500px;
-  /* grid-template-rows: 80px 70px repeat(3, 0); */
-  gap: 5px;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+	background-color: white;
+	border-bottom: 1px solid black;
+	display: grid;
+	grid-template-columns: 20% 23% 55%;
+	grid-template-areas: "name img text";
+	gap: 5px;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	width: 100%;
+}
+
+.r_left {
+	grid-area: name;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.r_right {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding: 5px;
+	font-size: 14px;
 }
 
 .iconContainer {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
 }
 
 .icon {
-  grid-area: 1 / 1 / 2 / 2;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  width: 50px;
-  height: 50px;
-  font-weight: bold;
+	grid-column: 1 / 2;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 100%;
+	width: 50px;
+	height: 50px;
+	font-weight: bold;
 }
 
 .nameAndCount {
-  grid-area: 2 / 1 / 3 / 2;
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .image {
-  grid-area: 1 / 2 / 3 / 4;
-  object-fit: cover;
-  height: 125px;
-  width: 125px;
-  border-radius: 20px;
+	object-fit: cover;
+	width: 100%;
+	border-radius: 20px;
 }
 
 .content {
-  grid-area: 2 / 4 / 3 / 6;
+	width: 100%;
+	display: flex;
 }
 
 .stars {
-  grid-area: 1 / 4 / 2 / 6;
-  display: flex;
-  align-items: flex-end;
-  color: #FC6260;
+	display: flex;
+	align-items: flex-end;
+	color: #fc6260;
 }
 
 .reviewCount {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 85px;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 80%;
+	justify-content: space-around;
+	font-size: 14px;
+	margin-top: 10px;
 }
 
 .imageContainer {
-  padding-top: 15px;
+	padding-top: 15px;
 }
 
 .editDelete {
-  background-color: green;
-  display: flex;
-  width: 100px;
-  justify-content: space-around;
-  top: 0;
-  right: 0;
+	display: flex;
+	width: 100px;
+	justify-content: space-around;
+	top: 0;
+	right: 0;
 }
