--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,44 +1,44 @@
 /* TODO Add site wide styles */
 * {
-    font-family: brandon-grotesque, sans-serif;
-    box-sizing: border-box;
+	font-family: brandon-grotesque, sans-serif;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: grey;
+	background-color: #e1e1e1;
 }
 
 .return_to_top_button a {
-    position: fixed;
-    right: 10px;
-    bottom: 0px;
-    font-size: 40px;
-    color: white;
-    z-index: 9999;
-    cursor: pointer;
+	position: fixed;
+	right: 10px;
+	bottom: 0px;
+	font-size: 40px;
+	color: white;
+	z-index: 9999;
+	cursor: pointer;
 }
 
 .return_to_top_button a:hover {
-    color: rgb(184, 184, 184);
-    animation: top-animation 0.5s ease-out;
+	color: rgb(184, 184, 184);
+	animation: top-animation 0.5s ease-out;
 }
 
 .return_to_top_button a:active {
 }
 
 @keyframes top-animation {
-    0% {
-        transform: translateY(-0.2em);
-    }
-    50% {
-        transform: translateY(-0.1em);
-    }
-    100% {
-        opacity: 1;
-    }
+	0% {
+		transform: translateY(-0.2em);
+	}
+	50% {
+		transform: translateY(-0.1em);
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 .super-parent-container {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
