--- a/react-app/src/Forms/ReservationForm/ReservationForm.module.css
+++ b/react-app/src/Forms/ReservationForm/ReservationForm.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
     width: 250px;
     height: 450px;
     border: 1px solid #E1E1E1;
@@ -13,8 +13,7 @@
 }
 
 .title {
-    font-size: 1.35rem;
-
+  font-size: 1.35rem;
 	width: 100%;
 	height: 500px;
 	border: 1px solid #e1e1e1;
@@ -74,4 +73,69 @@ p {
 
 .button:hover {
 	opacity: 100%;
+} */
+
+.form {
+  width: 100%;
+  height: 500px;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: white;
+  padding: 10px;
+}
+
+.title {
+  font-size: 21px;
+}
+
+hr {
+  height: 0.5px;
+  width: 200px;
+  background-color: #c7c7c7;
+  margin-top: -10px;
+  opacity: 50%;
+}
+
+p {
+  font-size: 14px;
+  text-align: left;
+  margin-top: 7px;
+}
+
+.party {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 200px;
+  margin-top: -20px;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 200px;
+  margin-top: -20px;
+}
+
+.button {
+  width: 200px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #983937;
+  opacity: 50%;
+  border-radius: 5px;
+}
+
+.button:hover {
+  opacity: 100%;
 }
