--- a/react-app/src/Forms/DeleteRestaurantForm/DeleteRestaurantForm.module.css
+++ b/react-app/src/Forms/DeleteRestaurantForm/DeleteRestaurantForm.module.css
@@ -5,17 +5,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #983937;
+  background-color: #da3743;
   border-radius: 5px;
   font-weight: 600;
   margin-left: 20px;
-  transition: all 0.3s ease 0s;
+  transition: all 0.5s ease 0s;
 
 }
 
 .button:hover {
   cursor: pointer;
-  background-color: #24599D
+  background-color: #bc202b;
 }
 
   .button_container {
@@ -29,6 +29,7 @@
 .text_container {
     text-align: center;
     align-items: center;
+    margin: 20px;
 }
 
 .main_container {
