--- a/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
+++ b/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
@@ -86,6 +86,9 @@
 .check_label {
     border-bottom: 1px solid;
     padding: 5px;
+    display: flex;
+    align-items: center;
+    text-indent: 10px;
 }
 
 .check_boxes label {
@@ -113,15 +116,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #983937;
+    background-color: #da3743;
     border-radius: 5px;
     font-weight: 600;
     margin-left: 20px;
-    transition: all 0.3s ease 0s;
+    transition: all 0.5s ease 0s;
 
   }
 
   .button:hover {
     cursor: pointer;
-    background-color: #24599D
+    background-color: #bc202b;
   }
