--- a/react-app/src/components/DeleteRestaurant/DeleteRestaurant.module.css
+++ b/react-app/src/components/DeleteRestaurant/DeleteRestaurant.module.css
@@ -5,15 +5,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #983937;
+  background-color: #da3743;
   border-radius: 5px;
   font-weight: 600;
   margin-left: 20px;
-  transition: all 0.3s ease 0s;
+  transition: all 0.5s ease 0s;
 
 }
 
 .button:hover {
   cursor: pointer;
-  background-color: #24599D
+  background-color: #bc202b;
 }
