--- a/react-app/src/components/Modal/Modal.css
+++ b/react-app/src/components/Modal/Modal.css
@@ -15,6 +15,7 @@
 .modal-content {
     /* height: 40vh;
     width: 40vw; */
+    border-radius: 5px;
     background-color: white;
     display: flex;
     justify-content: center;
