--- a/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
+++ b/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
@@ -1,10 +1,10 @@
 .container {
-    width: 1200px;
+    /* width: 1200px; */
     height: auto;
     margin-top: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* padding: 10px; */
     align-items: center;
     filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.16))
 }
@@ -17,7 +17,7 @@
     width: 700px;
     padding: 10px 20px;
 	background: #f4f7f8;
-	margin: 10px auto;
+	margin: 10px 20px;
 	padding: 20px;
 	background: #f4f7f8;
 	border-radius: 8px;
@@ -25,10 +25,10 @@
 .form_display {
     width: 300px;
     height: 400px;
-    margin: 50px auto;
-    display: flex;
-    border: black 1px solid;
-    flex-direction: column;
+    /* margin: 50px 10px; */
+}
+.form_display h3 {
+    text-align: center
 }
 
 .form_container {
@@ -128,3 +128,51 @@
     cursor: pointer;
     background-color: #bc202b;
   }
+
+  .each_container {
+    border: 1px solid #e1e1e1;
+    width: 100%;
+    height: 275px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    border-radius: 3px;
+    transition: all linear 0.3s;
+}
+
+.each_container h3 {
+    margin: 0;
+}
+
+.each_container div {
+    font-size: 14px;
+    width: 100%;
+}
+
+.each_container div i {
+    margin-right: 10px;
+}
+
+.card_img img {
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+}
+
+.info {
+    padding: 8px;
+}
+
+.borough_price {
+    display: flex;
+    justify-content: space-between;
+}
+
+.categories {
+    margin-top: 5px;
+}
+
+.each_container a {
+    color: black;
+    text-decoration: none;
+}
