added animations to calendar dropdown and homepage

--- a/react-app/src/components/ProfileDropdown/ProfileDropdown.module.css
+++ b/react-app/src/components/ProfileDropdown/ProfileDropdown.module.css
@@ -16,13 +16,13 @@
 	background-color: rgb(225, 225, 225);
 	border-radius: 5px;
 	border: 1px solid black;
-	animation: dropdown-animation 0.5s ease-out;
+	animation: dropdown-animation 0.2s ease-in-out;
 	z-index: 9999;
 }
 
 @keyframes dropdown-animation {
 	0% {
-		transform: translateY(-1em);
+		transform: translateY(-20px);
 		opacity: 0.2;
 	}
 	100% {
