--- a/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
+++ b/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
@@ -19,7 +19,7 @@
 	background-color: white;
 	border-top: 1px solid black;
 	display: grid;
-	grid-template-columns: 20% 23% 55%;
+	grid-template-columns: 20% 15% 35% 30%;
 	grid-template-areas: "name img text";
 	gap: 5px;
 	margin-bottom: 20px;
@@ -32,7 +32,8 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: center;
+
 }
 
 .r_right {
@@ -71,8 +72,10 @@
 
 .image {
 	object-fit: cover;
-	width: 100%;
+	width: 125px;
 	border-radius: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .content {
@@ -88,10 +91,9 @@
 
 .reviewCount {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	width: 80%;
-	justify-content: center;
+	width: 80px;
+	justify-content: space-evenly;
 	font-size: 14px;
 	margin-top: 10px;
 }
