--- a/react-app/src/Forms/UpdateReservationForm/UpdateReservationForm.module.css
+++ b/react-app/src/Forms/UpdateReservationForm/UpdateReservationForm.module.css
@@ -21,7 +21,7 @@ hr {
     width: 200px;
     background-color: #C7C7C7;
     margin-top: -10px;
-    opacity: 50%;
+    opacity: 0.5;
 }
 
 p {
@@ -56,10 +56,10 @@ p {
     align-items: center;
     color: white;
     background-color: #983937;
-    opacity: 50%;
+    opacity: 0.5;
     border-radius: 5px;
 }
 
 .button:hover {
-    opacity: 100%;
+    opacity: 1;
 }
