--- a/react-app/src/components/ProfilePage/Tabs/RestaurantReviews/RestaurantReviews.module.css
+++ b/react-app/src/components/ProfilePage/Tabs/RestaurantReviews/RestaurantReviews.module.css
@@ -1,9 +1,7 @@
 .container {
 	background-color: white;
 	width: 100%;
-	/* display: grid; */
-	/* gap: 5px;
-   */
+
 	display: flex;
 	flex-direction: column-reverse;
 	justify-content: center;
@@ -18,30 +16,28 @@
 .singleReview {
 	background-color: white;
 	border-bottom: 1px solid #C7C7C7;
-  /* border-bottom: 1px solid black; */
 	display: grid;
-	/* grid-template-columns: 20% 23% 55%; */
-	grid-template-columns: 30% 70%;
-	grid-template-areas: "name img text";
+  grid-template-columns: 100px 200px 400px repeat(2, 0);
+  grid-template-rows: 125px repeat(4, 0);
 	gap: 5px;
-	/* margin-bottom: 20px; */
 	padding-top: 10px;
-	width: 100%;
+	width: 800px;
 }
 
 .r_left {
-	grid-area: name;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-}
-
-.r_right {
+	grid-area: 1 / 1 / 2 / 2;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.r_right {
+  grid-area: 1 / 3 / 2 / 4;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 	padding: 5px;
 	font-size: 14px;
 }
@@ -72,6 +68,7 @@
 }
 
 .image {
+  grid-area: 1 / 2 / 2 / 3;
 	object-fit: cover;
 	width: 100%;
 	border-radius: 20px;
@@ -92,8 +89,8 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	width: 80%;
-	justify-content: space-around;
+	width: 40px;
+	justify-content: space-evenly;
 	font-size: 14px;
 	margin-top: 10px;
 }
@@ -123,7 +120,6 @@
 }
 
 .restaurantContainer {
-  /* border: 1px solid black; */
   padding-left: 10px;
   padding-right: 10px;
 }
