--- a/react-app/src/Forms/ReviewForm/ReviewForm.module.css
+++ b/react-app/src/Forms/ReviewForm/ReviewForm.module.css
@@ -41,7 +41,7 @@
 	height: 200px;
 	width: 100%;
 	display: grid;
-	grid-template-columns: 25% 75%;
+	grid-template-columns: 300px 350px;
 	grid-template-areas: "img ";
 	/* border-bottom: 1px solid grey; */
 	margin-bottom: 20px;
@@ -53,7 +53,6 @@
 }
 
 .img_placeholder {
-	width: 100%;
 	object-fit: cover;
 }
 
