--- a/react-app/src/components/ProfilePage/Tabs/RestaurantReviews/RestaurantReviews.module.css
+++ b/react-app/src/components/ProfilePage/Tabs/RestaurantReviews/RestaurantReviews.module.css
@@ -1,11 +1,10 @@
 .container {
 	background-color: white;
-	width: 100%;
-
+	width: 1200px;
 	display: flex;
 	flex-direction: column-reverse;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	margin-bottom: 100px;
 }
 
