--- a/react-app/src/components/SearchHeader/SearchHeader.module.css
+++ b/react-app/src/components/SearchHeader/SearchHeader.module.css
@@ -1,125 +1,124 @@
 .search_header {
-    width: 100%;
-    height: 250px;
-    background: linear-gradient(45deg, #24599D, #4895FD);
-    color: white;
-    font-weight: bold;
-    font-size: 22px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	width: 100%;
+	height: 250px;
+	background: linear-gradient(45deg, #24599d, #4895fd);
+	color: white;
+	font-weight: bold;
+	font-size: 22px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .search_calendar {
-    width: 200px;
-    position: absolute;
-    top: 110%;
-    right: 100%;
-    background-color: rgb(255, 255, 255);
-    padding: 10px;
-    border: 1px solid black;
+	width: 200px;
+	position: absolute;
+	top: 110%;
+	right: 100%;
+	background-color: rgb(255, 255, 255);
+	padding: 10px;
+	border: 1px solid black;
 }
 
 .search_calendar * {
-    background-color: rgb(255, 255, 255);
+	background-color: rgb(255, 255, 255);
 }
 .search_calendar abbr {
-    font-size: 12px;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    display: flex;
-    justify-content: center;
+	font-size: 12px;
+	color: black;
+	text-decoration: none;
+	text-align: center;
+	display: flex;
+	justify-content: center;
 }
 .search_calendar button {
-    border: none;
+	border: none;
 }
 .search_calendar button:hover {
-    color: red
+	color: red;
 }
 
 .react-calendar__tile.react-calendar__month-view__days__day {
-    color: red;
+	color: red;
 }
 
 .search_box_field {
-    height: 100%;
-    border: none;
-    background-color: transparent;
-    padding: 5px;
-    width: 300px;
+	height: 100%;
+	border: none;
+	background-color: transparent;
+	padding: 5px;
+	width: 300px;
 }
 
 .search_inputs {
-    display: flex;
-    background-color: white;
-    height: 40px;
-    border-radius: 5px;
+	display: flex;
+	background-color: white;
+	height: 40px;
+	border-radius: 5px;
 }
 .search_inner_div {
-    height: 100%;
-    position: relative;
-    display: flex;
+	height: 100%;
+	position: relative;
+	display: flex;
 }
 
 .calendar_box {
-    color: black;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 150px;
-    height: 100%;
-    padding: 5px 10px;
+	color: black;
+	font-size: 14px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 150px;
+	height: 100%;
+	padding: 5px 10px;
 }
 
 .calendar_box span {
-    margin-right: 10px;
-    position: relative;
-    top: 2px;
+	margin-right: 10px;
+	position: relative;
+	top: 2px;
 }
 
 .calendar_box span * {
-    width: 15px;
-    height: 15px;
+	width: 15px;
+	height: 15px;
 }
 
 .time_selector {
-    height: 100%;
+	height: 100%;
 }
 .time_selector_element {
-    height: 100%;
-    width: 100px;
-    border: none;
-    max-height: 65px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 100%;
+	width: 100px;
+	border: none;
+	max-height: 65px;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .search_button {
-    margin-left: 20px;
-    border: none;
-    border-radius: 5px;
-    width: 6rem;
-    background-color: #da3743;
-    color: white;
-    transition: all linear 0.3s;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
+	margin-left: 20px;
+	border: none;
+	border-radius: 5px;
+	width: 6rem;
+	background-color: #da3743;
+	color: white;
+	transition: all linear 0.3s;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 16px;
 }
 
 .search_button:hover {
-    background-color: #bc202b;
-    cursor: pointer;
-
+	background-color: #bc202b;
+	cursor: pointer;
 }
 
-.search_header form {
-    display: flex;
+.search_header div {
+	display: flex;
 }
